--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Blackbody Consulting</h1>
+							<h1>Blackbody Research</h1>
 							<p>Harnessing machine intelligence for organizations.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
@@ -119,14 +119,8 @@
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Mailing Address</h3>
-											<span>228 Park Ave S Suite: 59340<br />
-											New York, NY 10003-1502<br />
-											USA</span>
-										</li>
-										<li>
 											<h3>Email</h3>
-											<a href="#">questions at blackbodyconsulting dot com</a>
+											<a href="#">questions at blackbodyresearch dot com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
